force-app/main/default/objects/Admissions_Questionnaire__c.object
<CustomObject>
    <description>Admissions Assessments</description>
    <fields>
        <fullName>Additional_General_Comments__c</fullName>
        <label>Additional General Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Notifications_Email__c</fullName>
        <defaultValue>&quot;admissions-notifications&quot;&amp;$User.Email_Domain_Extension__c</defaultValue>
        <label>Admissions Notifications Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assessor_Recommendation__c</fullName>
        <label>Assessor Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Accept with Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioural_Problems__c</fullName>
        <label>Behavioural Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_and_Language__c</fullName>
        <label>Communication and Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within present ability range of class</fullName>
                </value>
                <value>
                    <fullName>Approaching/has potential for readiness</fullName>
                </value>
                <value>
                    <fullName>Significantly short of readiness of classroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contribution_to_Class_and_School__c</fullName>
        <label>Contribution to Class and School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_School_Hours_of_Englsih__c</fullName>
        <label>Current School Hours of English/week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_School_Main_Language__c</fullName>
        <label>Current School Main Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_School_Type__c</fullName>
        <label>Current School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State School</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Curriculum_Followed_by_School__c</fullName>
        <label>Curriculum Followed by School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Assessment__c</fullName>
        <label>Date of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_Learning_Support__c</fullName>
        <label>Details of Learning Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Other_Schools__c</fullName>
        <label>Details of Other Schools</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disability_Problems_Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_Motivation__c</fullName>
        <label>Effort &amp; Motivation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Assesor_on_Save__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Assesor on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_of_Assessor__c</fullName>
        <label>Email of Assessor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>English_Books_Read__c</fullName>
        <label>Reading in English</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>English_Lessons_taken__c</fullName>
        <label>English Lessons taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>English_Mother_Tongue__c</fullName>
        <label>English Mother Tongue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Reading__c</fullName>
        <label>English: Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Speaking__c</fullName>
        <label>English: Speaking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Writing__c</fullName>
        <label>English: Writing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Subject_Line__c</fullName>
        <formula>&quot;Assessment &quot;&amp;  Student_Name__r.Student_Name__c&amp;&quot; &quot;&amp;Student_Name__r.Student_Surname__c&amp; &quot; (&quot;&amp; Text(Student_Name__r.Year_Group__c )&amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Subject Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excels_in_Arts_Sports__c</fullName>
        <label>Excels in Arts/Sports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Language_is_English__c</fullName>
        <formula>TEXT(Student_Name__r.First_Language_is_English__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Language is English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Time_Activities__c</fullName>
        <label>Free Time Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_Comments__c</fullName>
        <label>Further Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Academic_Achievement__c</fullName>
        <label>General Academic Achievement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Concepts__c</fullName>
        <label>General Concepts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability</fullName>
                </value>
                <value>
                    <fullName>Middle Ability</fullName>
                </value>
                <value>
                    <fullName>Low Ability</fullName>
                </value>
                <value>
                    <fullName>Below Level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Had_Significant_Absence__c</fullName>
        <inlineHelpText>Full question: Has the student been absent from school for any significant time?</inlineHelpText>
        <label>Had Significant Absence?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Him_Her__c</fullName>
        <description>Used in the &apos;Teacher Recommendation Request&apos; email template</description>
        <formula>IF(
   TEXT(Student_Name__r.Gender__c) = &quot;Male&quot;, &quot;him&quot;,
   IF(
      TEXT(Student_Name__r.Gender__c) = &quot;Female&quot;, &quot;her&quot;,
      &quot;them&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Him/Her</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_with_Native_English_Speakers__c</fullName>
        <label>Interaction with Native English Speakers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_with_Others__c</fullName>
        <label>Interaction with Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Class_Participation__c</fullName>
        <label>Interest/Class Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unnaceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language spoken at home</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Disability__c</fullName>
        <label>Learning Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Support_Details__c</fullName>
        <label>Learning Support Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Spoken_English__c</fullName>
        <formula>TEXT(Student_Name__r.Level_of_Spoken_English__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Spoken English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Written_English__c</fullName>
        <formula>TEXT(Student_Name__r.Level_of_Written_English__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Written English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In School</fullName>
                </value>
                <value>
                    <fullName>Distance Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Current_School__c</fullName>
        <label>Location of Current School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Language_of_Instruction_in_School__c</fullName>
        <label>Main Language of Instruction in School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mathematics__c</fullName>
        <label>Mathematics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <label>Years Attending Current School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Current_School__c</fullName>
        <label>Name of Current School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_Assessment__c</fullName>
        <label>Notes on Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Now__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Numbers__c</fullName>
        <label>Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability</fullName>
                </value>
                <value>
                    <fullName>Middle Ability</fullName>
                </value>
                <value>
                    <fullName>Low Ability</fullName>
                </value>
                <value>
                    <fullName>Below Level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Mother_Tongue__c</fullName>
        <label>Additional Mother Tongue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Tongue_Language__c</fullName>
        <label>Other Mother Tongue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Initials__c</fullName>
        <label>Parent Initials</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Completing_Form__c</fullName>
        <label>Person Completing Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Social_Emotional_Development__c</fullName>
        <label>Personal, Social &amp; Emotional Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Development__c</fullName>
        <label>Physical Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Disability__c</fullName>
        <label>Physical Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Academic_Skill_Development__c</fullName>
        <label>Pre-Academic Skill Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <label>Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability</fullName>
                </value>
                <value>
                    <fullName>Middle Ability</fullName>
                </value>
                <value>
                    <fullName>Low Ability</fullName>
                </value>
                <value>
                    <fullName>Below Level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation_Requestor_Title__c</fullName>
        <formula>CreatedBy.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation Requestor Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Status__c</fullName>
        <formula>IF(
   Send_Request_Cancellation__c = TRUE,
   &quot;Request Cancelled&quot;,
   IF(
      AND(
          Send_Teacher_Recommendation_Request__c = FALSE,
          CONTAINS(RecordType.DeveloperName, &quot;Teacher_Recommendation&quot;)
          ),
          &quot;Request Not Sent&quot;,
      IF(   
         AND(
             Send_Teacher_Recommendation_Request__c = TRUE,
             Submitted_Online__c = FALSE
             ),
         &quot;Requested&quot;,
         IF(
            AND(
                Send_Teacher_Recommendation_Request__c = TRUE,
                Submitted_Online__c = TRUE
                ),
            &quot;Received&quot;,
            &quot;N/A&quot;
            )
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>IF(
   OR(
      RecordType.DeveloperName = &quot;Teacher_Recommendation_Pre&quot;,
      RecordType.DeveloperName = &quot;Teacher_Recommendation_Pri_Sec&quot;
      ),
   &quot;Teacher Recommendation&quot;,
   RecordType.Name
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Sent__c</fullName>
        <label>Request Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requires_Learning_Support__c</fullName>
        <label>Requires Learning Support?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <label>Response Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Satisactory_Progress_at_School__c</fullName>
        <label>Satisactory Progress at School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfaction_With_Academic_Progress__c</fullName>
        <label>Satisfaction With Academic Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Absence_Details__c</fullName>
        <label>Absence Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Student_Name__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Request_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Request Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Teacher_Recommendation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the workflow rule that sends the &apos;Teacher Recommendation Request&apos;</description>
        <label>Send Teacher Recommendation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Interactions_with_Peers__c</fullName>
        <label>Social Interactions with Peers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeds Age Expectations</fullName>
                </value>
                <value>
                    <fullName>Age Appropriate</fullName>
                </value>
                <value>
                    <fullName>Below Age Expectation</fullName>
                </value>
                <value>
                    <fullName>Area of concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaking_and_Listening__c</fullName>
        <label>Speaking and Listening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability</fullName>
                </value>
                <value>
                    <fullName>Middle Ability</fullName>
                </value>
                <value>
                    <fullName>Low Ability</fullName>
                </value>
                <value>
                    <fullName>Below Level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Ability_Comments__c</fullName>
        <label>Special Ability Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Ability__c</fullName>
        <label>Special Ability?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Considerations_Detail__c</fullName>
        <inlineHelpText>This field may not be in sync with the related student record. Click edit and save to synchronise it.</inlineHelpText>
        <label>Special Considerations Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Considerations__c</fullName>
        <formula>IF( 
INCLUDES(Student_Name__r.Special_Considerations__c, &quot;Learning Difficulty&quot;), 
&quot;Learning Difficulty&quot;&amp;BR(), 
&quot;&quot; 
)&amp; 
IF( 
INCLUDES(Student_Name__r.Special_Considerations__c, &quot;Physical Disability&quot;), 
&quot;Physical Disability&quot;&amp;BR(), 
&quot;&quot; 
)&amp; 
IF( 
INCLUDES(Student_Name__r.Special_Considerations__c, &quot;Behavioural Problems&quot;), 
&quot;Behavioural Problems&quot;&amp;BR(), 
&quot;&quot; 
)&amp; 
IF( 
INCLUDES(Student_Name__r.Special_Considerations__c, &quot;Medical / Allergies / Dietary&quot;), 
&quot;Medical / Allergies / Dietary&quot;&amp;BR(), 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Considerations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Doing_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Doing Assessment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Admissions_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Campus__c</fullName>
        <formula>Student_Name__r.Campus_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name_Formula__c</fullName>
        <formula>Student_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Questionnaires &amp; Teacher Recommendations</relationshipLabel>
        <relationshipName>Admissions_Questionnaire1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_s_Level_of_English__c</fullName>
        <label>Student&apos;s Level of English</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Mother Tongue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Online</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>